# voltvanguard-core

./: .gitignore  LICENSE  README.md  README_TR.md  dev_run.sh  docker-compose.yml  pom.xml  start_all.sh  stop_all.sh
ai-agents/route-optimizer/: .env.example  main.py  pyproject.toml  requirements.txt
ai-agents/route-optimizer/config/: settings.py
ai-agents/route-optimizer/kafka/: consumer.py
ai-agents/route-optimizer/models/: reservation.py  telemetry.py
ai-agents/route-optimizer/services/: decision_engine.py  llm_client.py  reservation_service.py  station_finder.py
ai-agents/route-optimizer/utils/: logger.py
mobile/voltvanguard_app/: README.md  pubspec.yaml  run_simulator.sh
mobile/voltvanguard_app/android/app/: build.gradle.kts
mobile/voltvanguard_app/android/app/src/main/: AndroidManifest.xml
mobile/voltvanguard_app/ios/Runner/: Info.plist
mobile/voltvanguard_app/ios/Runner.xcodeproj/: project.pbxproj
mobile/voltvanguard_app/lib/: main.dart
mobile/voltvanguard_app/lib/core/constants/: api_constants.dart
mobile/voltvanguard_app/lib/core/network/: api_client.dart  websocket_service.dart
mobile/voltvanguard_app/lib/core/router/: app_router.dart
mobile/voltvanguard_app/lib/core/services/: notification_service.dart
mobile/voltvanguard_app/lib/core/theme/: app_theme.dart
mobile/voltvanguard_app/lib/features/dashboard/data/models/: vehicle_telemetry_model.dart
mobile/voltvanguard_app/lib/features/dashboard/data/repositories/: vehicle_repository_impl.dart
mobile/voltvanguard_app/lib/features/dashboard/domain/repositories/: vehicle_repository.dart
mobile/voltvanguard_app/test/: widget_test.dart
src/main/java/com/voltvanguard/core/: VoltVanguardCoreApplication.java
src/main/resources/: application.yml
(+60 files in other folders)
